--- a/src/AddPage.css
+++ b/src/AddPage.css
@@ -67,6 +67,10 @@ textarea{
     width: 247px;
 }
 
+#Automated {
+    width: 255px;
+}
+
 label.endDate{
     position: relative;
     color: white;
