--- a/src/DoIt.css
+++ b/src/DoIt.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700;800&display=swap");
+
 #DoItContainer{
     display: flex;
     position: relative;
@@ -16,11 +18,68 @@ left: 4px;
 top: 0px;
 }
 
-.MuiButtonBase-root.MuiFab-root.MuiFab-circular.MuiFab-sizeSecondary.MuiFab-secondary.css-kznubb-MuiButtonBase-root-MuiFab-root {
+.css-w0pj6f {
+    overflow: hidden;
+    pointer-events: none;
     position: absolute;
+    z-index: 0;
+    inset: 0px;
+    border-radius: inherit;
+}
+
+.css-vubbuv {
+    user-select: none;
+    width: 1em;
+    height: 1em;
+    display: inline-block;
+    fill: currentcolor;
+    flex-shrink: 0;
+    transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    font-size: 1.5rem;
+  }
+
+  .navbar-collapse {
+    flex-grow: 1;
+    align-items: center;
+    flex-basis: 0%;
+  }
+
+.css-1efuce {
+    display: inline-flex;
+    -moz-box-align: center;
+    align-items: center;
+    -moz-box-pack: center;
+    justify-content: center;
+    position: absolute;
+    box-sizing: border-box;
+    outline: currentcolor none 0px;
+    border: 0px none;
+    margin: 0px;
+    cursor: pointer;
+    user-select: none;
+    vertical-align: middle;
+    appearance: none;
+    text-decoration: none;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-weight: 500;
+    font-size: 0.875rem;
+    line-height: 1.75;
+    letter-spacing: 0.02857em;
+    text-transform: uppercase;
+    min-height: 36px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    border-radius: 50%;
+    padding: 0px;
+    min-width: 0px;
+    width: 56px;
+    height: 56px;
+    z-index: 1050;
+    box-shadow: rgba(0, 0, 0, 0.2) 0px 3px 5px -1px, rgba(0, 0, 0, 0.14) 0px 6px 10px 0px, rgba(0, 0, 0, 0.12) 0px 1px 18px 0px;
+    color: rgb(255, 255, 255);
+    background-color: rgb(156, 39, 176);
     right: 6px;
     bottom: 8px;
-}
+  }
 
 #NameFont{
     position: relative;
@@ -44,15 +103,24 @@ color: white;
 
 }
 
+#TaskContainer {
+    margin: auto;
+    position: relative;
+}
+
 #TaskContain{
     top: 11px;
     position: relative;
     overflow-y: auto;
     overflow-x: hidden;
     overflow: scroll;
-    box-shadow: rgb(32, 32, 32) 0px 0px 30px 21px;
-    display: flex;
+    box-shadow: rgb(255, 255, 255) 0px 0px 15px 12px;
+    display: grid;
+    grid-gap: 3px;
     flex-wrap: wrap;
+    border-radius: 26px;
+    background: #232427;
+    margin: auto;
 }
 
 .Task{
@@ -128,8 +196,45 @@ i.logout::after {
 #searchButton{
     display: flex;
     position: absolute;
-    right: 8px;
+    right: 5px;
 }
+
+@media (min-width: 1150px) {
+    #TaskContain {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media ((min-width: 580px) and (max-width: 1149px)) {
+    #TaskContain {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 580px) {
+    #TaskContain {
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .form-control {
+        position: relative;
+        left: 35px;
+        padding-right: 28px;
+    }
+
+   #NameFont {
+    left: 6px;
+    top: -1px;
+    font-family: 'Times New Roman', 'Times', 'serif';
+    font-size: 22px;
+   } 
+
+   #searchButton {
+    width: 60%;
+   } 
+  }
 
 .design{
     width: 10px;
@@ -160,6 +265,7 @@ i.logout::after {
     position: relative;
     /* height: 70px; */
     height: 30px;
+    width: 100%;
 }
 
 .TaskFont1{
@@ -178,18 +284,141 @@ max-height: 80px;
 top: 3px;
 }
 
+.hCover {
+
+}
+
+body {
+    background: #232427;
+}
+
+* {
+    margin: 0;
+    /* padding: 0; */
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+  }
+
 .card {
     margin-left: 23px;
     margin-top: 9px;
+}
+
+.card {
+    position: relative;
+    /* min-width: 320px; */
+    height: 360px;
+    box-shadow: inset 5px 5px 5px rgba(0, 0, 0, 0.2),
+      inset -5px -5px 15px rgba(255, 255, 255, 0.1),
+      5px 5px 15px rgba(0, 0, 0, 0.3), -5px -5px 15px rgba(255, 255, 255, 0.1);
+    border-radius: 15px;
+    /* margin: 30px; */
+    transition: 0.5s;
+    background: #232427;
+}
+
+.box {
+    position: absolute;
+    top: 20px;
+    left: 20px;
+    right: 20px;
+    bottom: 20px;
+    background: #2a2b2f;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    flex-direction: column;
+    transition: 0.5s;
+    /* overflow-x: auto; */
+}
+
+/* .box:hover {
+    transform: translateY(-50px);
+} */
+
+.pCover {
+    height: 200px;
+    overflow: scroll;
+    word-break: break-word;
+    position: relative;
+    top: 56px;
+    margin-bottom: 36px;
+}
+
+.box:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.03);
+}
+
+.content {
+    padding: 4px;
+    text-align: center;
+    position: relative;
+    /* top: -36px; */
+    display: flex;
+    flex-direction: column;
+}
+
+.box h2 {
+    position: absolute;
+    top: -10px;
+    right: 30px;
+    font-size: 8rem;
+    color: rgba(255, 255, 255, 0.1);
+}
+  
+.content h3 {
+    font-size: 1.8rem;
+color: #fff;
+z-index: 1;
+transition: 0.5s;
+margin-bottom: 15px;
+top: 58px;
+position: relative;
+overflow-wrap: anywhere;
+hyphens: auto;
+overflow: auto;
+
+}
+  
+.content p {
+    font-size: 1rem;
+    font-weight: 300;
+    color: rgba(255, 255, 255, 0.9);
+    z-index: 1;
+    transition: 0.5s;
+}
+
+@media ((min-width: 366px) and (max-width: 580px)) {
+    .card {
+        margin: auto;
+        margin-top: 9px;
+        width: 20rem;
+    }
 }
 
 
 .expandMore{
     border: none;
     background: none;
-    bottom: 0px;
+    bottom: -3px;
     position: relative;
     right: 4px;
+}
+
+.searchIcon{
+    border: none;
+    background: none;
+    bottom: 1px;
+    position: absolute;
+    right: 31px;
 }
 
 p {
